repetition issue fixed

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" </head>
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Weather Dashboard</h1>
-        </div>
-    </div>
-
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div class="jumbotron jumbotron-fluid mt-3">
+        <div class="container">
+            <h1 class="display-4 text-center" id="weather-dashboard-title">Weather Dashboard</h1>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
@@ -42,8 +42,10 @@
     <br>
     <br>
     <!--5 day forecast-->
-    <div class="forecast-div row">
-    
+    <div class="container col-sm-12">
+        <div class="forecast-div row">
+
+        </div>
     </div>
 
 
@@ -54,6 +56,8 @@
         var cardText = $("#card-text");
         var cardBody = $("#card-body");
         var card1 = $("#card-1");
+        var uvIndexDiv = $("#uv-index")
+        var forecastDiv = $(".forecast-div")
         //It makes it a global variable
         var input;
 
@@ -102,10 +106,12 @@
                 method: "GET"
             }).then(function (response) {
                 var uvForecast = $(".uvForecast")
-                var responseValue = $("<p>" + "UV Index: " + response.value + "</p>")
+                var span = $("<span>" + response.value + "</span>").css("background-color", "red")
+                var responseValue = $("<p>  UV Index: </p>")
+                responseValue.append(span)
                 uvForecast.text(response.value)
                 if (response.value >= 6) {
-                    $("#uv-index").append(responseValue).css("background-color", "red")
+                    $("#uv-index").html(responseValue)
                 };
 
             });
@@ -123,6 +129,7 @@
                 method: "GET"
             }).then(function (response) {
                 console.log(response)
+                forecastDiv.empty()
                 for (i = 0; i < 5; i++) {
                     var today = response.daily[i]
                     console.log(today)
@@ -133,33 +140,19 @@
 
                     var todayCard = `<div class="col-sm-2">
                                 <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title"> ${date} </h5>
+                                    <div class="card-body" style="background-color: #0BB5FF;">
+                                        <h5 class="card-title" style="color:white;"> ${date} </h5>
                                         <img src ="http://openweathermap.org/img/w/${today.weather[0].icon}.png"
                                         <p class="card-text"> Temperature ${today.temp.day}</p>
                                         <p> Humidity: ${today.humidity}</p>
                                     </div>
                                 </div>
                             </div>`
-                        $(".forecast-div").append(todayCard)
-
-
-
-
+                    $(".forecast-div").append(todayCard)
 
                 }
             });
         }
-
-
-
-        //         //Current day
-        //         for (i = 0; i < response.list.length; i += 7) {
-        //             var today = response.list[i]
-        //             //vartodayText = $("<p>" + today.main.dt_text + today.main.temp + today.main.humidity + "</p>").css ({"background-color": "yellow", "font-size": "200%"})
-        //             console.log(today)
-
-        //         };
 
 
 
@@ -171,19 +164,6 @@
             searchCity()
         });
 
-
-        //function searchButton {
-
-        //}
-
-
-
-
-
-
-
-        //var queryURL = "http://api.openweathermap.org/data/2.5/forecast?id=524901&APPID=d97355d58c6b5630b8875481727974dc"
-        //console.log(queryURL)
 
 
 
