final css changes

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                             type="submit">Search</button>
                     </form>
                 </nav>
-            <ul class="past-searches">
+            <ul class="past-searches list-group list-group-flush">
 
             </ul>
             </div>
             <!--Weather-->
-            <div class="card-body col-md-8 bg-light" id="card-body">
-                <p class="card-text" id="card-text">
-                </p>
-                <div class="col-md-8" id="uv-index"></div>
+            <div class="card-body col-md-8" id="card-body">
+                <p class="card-text" id="card-text"></p>
+                <p id="uv-index"></p>
+                <!--<div class="col-md-8" id="uv-index"></div>-->
             </div>
         </div>
     </div>
